--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   hello-world-test:
 
     name: Build Docker Image
-    runs-on: ubuntu-latesr
+    runs-on: ubuntu-latest
     steps:
       -  name: Checkout
          uses: actions/checkout@v2
