--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
            IMAGE_TAG: latest
 
          run: 
-           docker build -t $ECR_REGISRY/$ECR_REPOSITORY:$IMAGE_TAG .
-           docker push $ECR_REGISRY/$ECR_REPOSITORY:$IMAGE_TAG
+           docker build -t $ECR_REGISRY/$ECR_REPOSITORY:1.0 .
+           docker push $ECR_REGISRY/$ECR_REPOSITORY:1.0
