--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,4 @@ jobs:
            IMAGE_TAG: latest
 
          run: 
-           docker build -t $ECR_REGISRY/$ECR_REPOSITORY:1.0 .
-           docker push $ECR_REGISRY/$ECR_REPOSITORY:1.0
+           docker buildx build --push -t $ECR_REGISRY/$ECR_REPOSITORY:1.0 .
