--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,4 @@ jobs:
            IMAGE_TAG: latest
 
          run: 
-           sudo docker buildx build -t $ECR_REPOSITORY .
-           sudo docker push $ECR_REPOSITORY .
+           sudo docker buildx build --push -t $ECR_REPOSITORY .
