--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
            IMAGE_TAG: latest
 
          run: 
-           docker login
+           docker login .
            docker buildx build --push -t $ECR_REPOSITORY .
