--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ on:
     branches: [ "master" ]
   
 jobs:
-  Cypress-Test:
-   
+  Hello-Test:
   
     name: Build Docker Image
     runs-on: ubuntu-latest  
